--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "opencall",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://opencall-appelouvert.alpha.canada.ca",
+  "homepage": "https://dis-sin.github.io/Virtual-Kiosk/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "gc-tortilla": "^1.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
