--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "react-scripts build && node buildScripts/customBuild.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
